# requests_proxy_adapter

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage  usage.rst
requests_proxy_adapter/: __init__.py  api.py  exceptions.py  version.py
tests/: __init__.py  test_privoxy_adapter.py  test_requests_proxy_adapter.py  test_retry_privoxy_adapter.py
