[metadata]
name = requests_proxy_adapter
author = Alexey Shevchenko
author-email = otetz@me.com
maintainer = Alexey Shevchenko
maintainer-email = otetz@me.com
summary = Set of Proxy Transport Adapters fro Requests
description-file = README.rst
home-page = https://github.com/otetz/requests_proxy_adapter
license = MIT license
classifier =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
keywords =
    requests
    proxy

[files]
packages =
    requests_proxy_adapter

[extras]
test =
    tox==2.9.1
    coverage==4.4.2
    pytest==3.3.0
    pytest-runner==3.0
    pytest-cov==2.5.1
    flaky==3.4.0
dev =
    flake8==3.5.0
    Sphinx==1.6.5

[bdist_wheel]
universal = 1

[flake8]
exclude = .cache,build,docs/conf.py
max-line-length = 120

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[pbr]
autodoc_tree_index_modules = 1

[tool:pytest]
addopts = --ignore=setup.py

